syntax = "proto3";

package user_service;

service UserService {
  rpc RegisterUser (UserRequest) returns (UserResponse);
  rpc GetUserGoal (GoalRequest) returns (GoalResponse);
}

message UserRequest {
  string username = 1;
  string email = 2;
  string password = 3;
  string goal = 4;
}

message UserResponse {
  string user_id = 1;
  string username = 2;
  string email = 3;
}

message GoalRequest {
  string user_id = 1;
}

message GoalResponse {
  string goal_type = 1;
}
